# scrypton

./: .gitignore  README.md  pyproject.toml
docs/: explanation.md  howto.md  index.md  reference.md
scrypton/: __init__.py  scrypton.py
scrypton/templates/: script.py
templates/: script.py
